@@ -213,6 +213,12 @@ struct iter_qstate {
 	int referral_count;
 
 	/**
+	 * This flag, if true, means that this event is a priming query.
+	 * In that case priming stub may be set as well.
+	 */
+	int priming;
+
+	/**
 	 * This is flag that, if true, means that this event is 
 	 * representing a stub priming query. It is meaningless unless 
 	 * the finalState is the PRIMING_RESP_STATE.
